--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
     "react-dnd-touch-backend": "^0.1.0",
     "react-document-title": "^1.0.0",
     "react-draggable": "^0.8.1",
+    "react-dropdown": "^0.6.1",
     "react-hot-loader": "^1.1.4",
     "react-intl": "^1.1.0",
     "react-pure-render": "^1.0.1",
     "react-router": "^0.13.1",
-    "react-select": "^0.5.6",
     "react-textarea-autosize": "^2.3.1",
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
