--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "gulp test"
   },
   "engines": {
-    "node": "0.10.x",
+    "node": "4.2.2",
     "npm": "3.3.3"
   },
   "dependencies": {
