--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "node-fetch": "^1.3.1",
     "node-notifier": "^4.1.0",
     "node-sass": "^3.1.2",
+    "nodemailer": "^2.2.1",
     "normalize.css": "^3.0.2",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
