--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
     "serve-favicon": "^2.2.0",
+    "socket.io": "^1.4.5",
     "style-loader": "^0.12.0",
     "stylus-loader": "^1.0.0",
     "through2": "^2.0.0",
