--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.0.8",
-    "babel-core": "^5.0.8",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^5.8.38",
     "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
     "bcrypt-nodejs": "^0.0.3",
@@ -96,5 +96,6 @@
     "webpack": "^1.9.5",
     "webpack-dev-server": "^1.7.0",
     "yargs": "^3.3.1"
-  }
+  },
+  "devDependencies": {}
 }
