--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "intl-messageformat": "^1.1.0",
     "intl-relativeformat": "^1.1.0",
     "isomorphic-fetch": "^2.1.0",
+    "jquery": "^2.2.3",
     "karma": "^0.12.36",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.12",
