--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-cli": "^6.7.5",
+    "babel": "^5.8.38",
     "babel-core": "^5.8.38",
     "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
