--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
     "serve-favicon": "^2.2.0",
+    "socket.io": "https://registry.npmjs.org/socket.io/-/socket.io-1.4.5.tgz",
     "style-loader": "^0.12.0",
     "stylus-loader": "^1.0.0",
     "through2": "^2.0.0",
