payments through paypal experimenting, a few fixes

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "normalize.css": "^3.0.2",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.6.9",
     "piping": "0.1.6",
     "ramda": "^0.19.1",
     "react": "^0.13.1",
