props isBriefing for task and isSpecial for all cleanup, 2 new tests, functioning React Component test with ignore styles package on gulp-mocha

--- a/package.json
+++ b/package.json
@@ -100,5 +100,7 @@
     "webpack-dev-server": "^1.7.0",
     "yargs": "^3.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ignore-styles": "^4.0.0"
+  }
 }
