--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "karma-webpack": "^1.5.1",
     "less": "^2.5.1",
     "less-loader": "^2.0.0",
+    "lockr": "^0.8.4",
     "mocha": "^2.2.5",
     "mongoose": "^4.1.10",
     "morgan": "^1.6.1",
