--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mia-app",
-  "description": "Non-trivial non-clicker webgame for aspiring masterminds, based on este v9 from @steida",
+  "description": "Espionage theme webgame, soon to be multiplayer, framework este v9.2",
   "author": "@DavidFogas",
   "version": "0.0.0",
   "private": true,
@@ -19,7 +19,9 @@
     "babel-core": "^5.8.38",
     "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
+    "babel-polyfill": "^6.7.4",
     "bcrypt-nodejs": "^0.0.3",
+    "bin-version-check": "^2.1.0",
     "bluebird": "^2.9.9",
     "body-parser": "^1.12.4",
     "chai": "^3.0.0",
@@ -34,7 +36,6 @@
     "eslint-plugin-react": "^2.0.1",
     "eventemitter3": "^1.0.1",
     "express": "^4.11.2",
-    "express-session": "^1.14.0",
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
     "flux": "^2.0.1",
@@ -51,24 +52,14 @@
     "intl-relativeformat": "^1.1.0",
     "isomorphic-fetch": "^2.1.0",
     "jquery": "^2.2.3",
-    "karma": "^0.12.36",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-coverage": "^0.4.2",
-    "karma-mocha": "^0.2.0",
-    "karma-notify-reporter": "^0.1.1",
-    "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "^1.5.1",
-    "less": "^2.5.1",
-    "less-loader": "^2.0.0",
     "lockr": "^0.8.4",
+    "log-symbols": "^1.0.2",
     "mocha": "^2.2.5",
     "mongoose": "^4.1.10",
     "morgan": "^1.6.1",
     "nconf": "^0.7.1",
     "node-fetch": "^1.3.1",
     "node-notifier": "^4.1.0",
-    "node-sass": "^3.1.2",
     "nodemailer": "^2.2.1",
     "normalize.css": "^3.0.2",
     "passport": "^0.2.2",
@@ -77,23 +68,19 @@
     "piping": "0.1.6",
     "ramda": "^0.19.1",
     "react": "^0.13.1",
-    "react-dnd": "^1.1.5",
-    "react-dnd-touch-backend": "^0.1.0",
     "react-document-title": "^1.0.0",
-    "react-draggable": "^0.8.1",
     "react-dropdown-w-react13": "^1.0.0",
     "react-gemini-scrollbar": "^1.1.1",
     "react-hot-loader": "^1.1.4",
     "react-intl": "^1.1.0",
     "react-pure-render": "^1.0.1",
     "react-router": "^0.13.1",
-    "react-textarea-autosize": "^2.3.1",
     "run-sequence": "^1.0.2",
-    "sass-loader": "^1.0.0",
     "serve-favicon": "^2.2.0",
     "socket.io": "https://registry.npmjs.org/socket.io/-/socket.io-1.4.5.tgz",
     "style-loader": "^0.12.0",
-    "stylus-loader": "^1.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "through2": "^2.0.0",
     "url-loader": "^0.5.5",
     "validator": "^3.34.0",
