--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "extract-text-webpack-plugin": "^0.8.0",
     "file-loader": "^0.8.1",
     "flux": "^2.0.1",
-    "gulp": "^3.8.10",
+    "gulp": "^3.9.0",
     "gulp-bg": "0.0.5",
     "gulp-eslint": "^0.14.0",
     "gulp-mocha": "^2.2.0",
@@ -82,7 +82,7 @@
     "url-loader": "^0.5.5",
     "validator": "^3.34.0",
     "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.14.0",
+    "webpack-dev-server": "1.14.0",
     "yargs": "^3.3.1"
   },
   "devDependencies": {
