--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "autoprefixer": "^6.4.0",
     "babel": "^5.8.38",
     "babel-core": "^5.8.38",
-    "babel-eslint": "^3.0.1",
+    "babel-eslint": "^4.1.8",
     "babel-loader": "^5.0.0",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^2.9.9",
@@ -63,6 +63,7 @@
     "passport-local": "^1.0.0",
     "paypal-rest-sdk": "^1.6.9",
     "piping": "0.1.6",
+    "poststylus": "^0.2.3",
     "ramda": "^0.19.1",
     "react": "^0.13.1",
     "react-document-title": "^1.0.0",
