--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.4.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel": "^5.8.38",
     "babel-core": "^5.8.38",
     "babel-eslint": "^4.1.8",
