--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-intl": "^1.1.0",
     "react-pure-render": "^1.0.1",
     "react-router": "^0.13.1",
+    "react-star-rating-component": "^1.2.1",
     "run-sequence": "^1.0.2",
     "serve-favicon": "^2.2.0",
     "socket.io": "https://registry.npmjs.org/socket.io/-/socket.io-1.4.5.tgz",
